<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Phone.EmailActivity">

    <EditText
        android:id="@+id/to_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/enter_reciepient"
        android:textColor="#111010"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sub_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_subject"
        android:textColor="#111010"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/body_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_message"
        android:textColor="#111010"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:text="@string/send"
        android:textColor="#ffff"
        android:textSize="23sp"
        android:textStyle="bold"
        android:onClick="mailSend"/>

</LinearLayout>