<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fragment_container">



    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/phone_call"
        android:textAlignment="center"
        android:layout_marginTop="120dp"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="23sp"
        android:onClick="callOperation"
        android:background="@drawable/shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/read_contacts"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="23sp"
        android:onClick="contactOperation"
        android:background="@drawable/shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/phone_details"
        android:layout_marginTop="280dp"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="23sp"
        android:onClick="detailsOperation"
        android:background="@drawable/shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/send_email"
        android:layout_marginTop="360dp"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="23sp"
        android:onClick="emailOperation"
        android:background="@drawable/shape"/>
    </FrameLayout>

</LinearLayout>