<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/fragment_container">



        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/taking_camera"
            android:textAlignment="center"
            android:layout_marginTop="180dp"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="23sp"
            android:onClick="cameraOperation"
            android:background="@drawable/shape"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/recording_videos"
            android:layout_marginTop="270dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="23sp"
            android:onClick="VideoOperation"
            android:background="@drawable/shape"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/voice_recorder"
            android:layout_marginTop="360dp"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="23sp"
            android:onClick="VoiceOperation"
            android:background="@drawable/shape"/>

    </FrameLayout>

</LinearLayout>